[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylua"
version = "0.1.0"
description = "A Lua implementation in Python"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pre-commit"]

[tool.ruff]
# 行长度限制（类似clang-format的column limit）
line-length = 100

# Python版本
target-version = "py312"

# 排除的目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    "build",
    "dist",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# 忽略的规则
ignore = [
    "E501",  # line too long (由formatter处理)
    "B008",  # 不要求函数调用参数必须全部命名
]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进风格
indent-style = "space"

# 保留magic trailing comma
skip-magic-trailing-comma = false

# 行尾风格
line-ending = "auto"

[tool.ruff.lint.isort]
# import排序配置
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
# Python版本
python_version = "3.12"

# 允许逐步引入类型检查
ignore_missing_imports = true

# 对未标注函数体不强制检查，降低接入成本
check_untyped_defs = false

# 与Ruff排除目录保持一致
exclude = [
    "^\\.git/",
    "^\\.venv/",
    "^build/",
    "^dist/",
    "^__pycache__/",
]

[tool.setuptools]
packages = ["binary", "codegen", "parser", "structs", "vm"]
py-modules = ["cli", "pylua", "pyluac"]
